add_executable(1031_test 1031_test.cc)
add_executable(2_test 2_test.cc)
add_executable(5_test 5_test.cc)
add_executable(6_test 6_test.cc)
add_executable(7_test 7_test.cc)
add_executable(8_test 8_test.cc)
add_executable(8_test_1 8_test_1.cc)
add_executable(10_test 10_test.cc)
add_executable(11_test 11_test.cc)
add_executable(16_test 16_test.cc)
add_executable(17_test 17_test.cc)
add_executable(21_test 21_test.cc)